cargo_out.txt
    Checking poly-apex-copy v0.1.0 (D:\Poly Projects\New Era\Beast-Copy)
error[E0432]: unresolved import `alloy::signers::local`
   --> src\execution\clob_executor.rs:10:21
    |
 10 | use alloy::signers::local::PrivateKeySigner;
    |                     ^^^^^ could not find `local` in `signers`
    |
note: found an item that was configured out
   --> C:\Users\Vasanth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\alloy-0.3.6\src\lib.rs:153:35
    |
151 |     #[cfg(feature = "signer-local")]
    |           ------------------------ the item is gated behind the `signer-local` feature
152 |     #[doc(inline)]
153 |     pub use alloy_signer_local as local;
    |                                   ^^^^^

warning: unused import: `std::str::FromStr`
  --> src\execution\clob_executor.rs:11:5
   |
11 | use std::str::FromStr;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
  --> src\execution\clob_executor.rs:41:42
   |
41 |                 let eth_signer_builder = signer.clone();
   |                                          ^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
warning: `poly-apex-copy` (bin "poly-apex-copy") generated 1 warning
error: could not compile `poly-apex-copy` (bin "poly-apex-copy") due to 2 previous errors; 1 warning emitted
